# super-duper-segmentation

./: .gitignore  README.md  pyproject.toml  task-specs.md
notebooks/: demo.ipynb
notebooks/.ipynb_checkpoints/: prototype-checkpoint.ipynb
requirements/: conda-environment.yaml
src/super_segmenter/: params.py
src/super_segmenter/models/: __init__.py  unet.py
src/super_segmenter/scripts/: train.py
src/super_segmenter/training/: data.py  trainer.py
src/super_segmenter/training/summary/: __init__.py  summary_writer.py
src/super_segmenter/utils/: constants.py  helpers.py  metrics.py  params.py
